Implementation of new suppressions method, removing integration tests related to the healthcheck endpoint, renaming application_name_space, code cleanup